[project]
name = "agent-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-litellm>=0.7.0",
    "langchain-mistralai>=1.1.6",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "langchain-redis>=0.2.5",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "litellm>=1.91.1",
    "pandas>=3.0.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
]
